Create TOTP workflow
